Add single and multiple choice question slides
